# golf-app

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Procfile  db.sqlite3  fix_phantom_algorithm.py  manage.py  pyproject.toml  railway.toml  requirements.txt
accounts/: admin.py  admin_forms.py  backends.py  models.py  otp.py  phone.py  scoping.py  scoring_access.py  serializers.py  sms.py  test_invite.py  test_otp.py  tests.py  twilio_verify.py  urls.py  views.py
api/: context_processors.py  invite_views.py  middleware.py  serializers.py  test_catalog.py  test_course_quality.py  test_delegated_scoring.py  test_eighteen_hole_match.py  test_fourball.py  test_game_suggestions.py  test_genius_import.py  test_halved_lookup.py  test_handicap_authoritative.py  test_handicap_propagation.py  test_home_course.py  test_honors.py  test_low_net_modes.py  test_messaging.py  test_nassau_multi_match.py  test_nassau_segments.py  test_partial_rounds.py  test_players_on_app.py  test_push.py  test_recent_courses.py  test_shared_play.py  test_shared_rounds.py  test_short_courses.py  test_skins_pool.py  test_spots.py  test_stableford.py  test_stableford_championship.py  test_support_access.py  test_sync_catalog_tees.py  test_tee_revisions.py  test_tournament_delete.py  test_vegas.py  test_watch_vegas.py  test_watchers.py  test_withdrawal.py  tests.py  (+3 more)
core/: admin.py  apps.py  models.py  signals.py  tester.py
docs/: Halved-Brand-Guidelines.md  app-privacy-labels.md  app-store-listing.md  app-store-review-notes.md  catalog-curation-and-updates.md  color-standard.md  firebase-push-setup.md  (+24 more)
(+424 files in other folders)
