[project]
name = "golf-app"
version = "0.1.0"
description = ""
authors = [
    {name = "lip77us",email = "paul@lipkin.us"}
]
requires-python = "3.13.1"
dependencies = [
    "django (>=6.0.4,<7.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
